fix: size collapse on small screens

--- a/docs/src/app/(private)/experiments/navigation-menu.module.css
+++ b/docs/src/app/(private)/experiments/navigation-menu.module.css
@@ -121,12 +121,8 @@
   transition-property: opacity, transform, width, height;
   transition-duration: var(--duration);
   transition-timing-function: var(--easing);
-  width: max-content;
+  width: var(--popup-width);
   height: var(--popup-height);
-
-  @media (min-width: 500px) {
-    width: var(--popup-width);
-  }
 
   &[data-starting-style],
   &[data-ending-style] {
@@ -164,8 +160,8 @@
   padding: 1.5rem;
   width: calc(100vw - 40px);
   height: 100%;
-  max-height: var(--available-height);
   overflow-y: auto;
+  max-height: var(--available-height);
 
   @media (min-width: 500px) {
     width: max-content;
@@ -258,13 +254,6 @@
   font-size: 0.875rem;
   line-height: 1.25rem;
   color: var(--color-gray-500);
-}
-
-.LongList {
-  display: flex;
-  flex-direction: column;
-  list-style: none;
-  overflow-y: auto;
 }
 
 .Arrow {
